Overflow issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 }
 body{
   background: #dfe9f5;
+  overflow-x: hidden;
 }
 
 .head_wrapper{
